--- a/nestjs-clean-arch/.prettierrc
+++ b/nestjs-clean-arch/.prettierrc
@@ -1,4 +1,7 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "printWidth": 80,
+    "arrowParens": "avoid"
 }
